acl-1.1.3 (27 Aug 2001)
	- fix bug in ACE ordering causing setfacl failure (eric@peters.org)
	- improve ACL parsing error reporting from chacl (ak@suse.de)
	- fix bug in ACL parsing causing setfacl failure (eric@peters.org)

acl-1.1.2 (03 Aug 2001)
	- incorporated setfacl(1) and getfacl(1) tools, written by
	  Andreas Gruenbacher <a.gruenbacher@computer.org>
	- added the extra libacl routines needed in order for these
	  tools to properly function
	- [this should ensure the two libacl implementations (ext2/xfs)
	   don't drift apart in incompatible ways and will also provide
	   similar ACL tools for both - a single userspace is still the
	   longer-term goal, but will require a common system call API]
	- fixup some man page typos
	- rearrange headers to better separate user/kernel
	- failed syscall returns ENOSYS, no longer writes to stderr

acl-1.1.1 (23 Jul 2001)
	- install static libs and libtool archives into /usr/lib
	- shared libraries are unchanged, however
	- merged patch from Danny Cox (added -r option to chacl)

acl-1.1.0 (16 Jul 2001)
	- reworked Makefiles to use libtool
	- rework some of the Debian packaging rules
	- libacl now installed into /lib instead of /usr/lib
	- chacl now installed into /bin instead of /usr/bin,
	  for consistency with chmod, chgrp, and chown

acl-1.0.8 (02 Jul 2001)
	- Work around syscall number collision on recent ia64 kernels

acl-1.0.7 (20 June 2001)
	- Change acl_get_qualifier() to dynamically allocate
	  the returned qualifier so that acl_free() can be
	  used to free the qualifier as decreed in the
	  withdrawn Posix standard.
	  This change was suggested by Juergen Hasch when
	  using code with Samba.

acl-1.0.6 (13 June 2001)
	- Move acl/acl.h --to--> sys/acl.h which makes
	  it satisfy the Posix ACL standard.
	  This was also what was used in IRIX.
	- A fix was also done on June 11 for "chacl -b" and
	  "chacl -d" where the default ACL is being given. 
	  The code was checking the validity of the access ACL