@@ -1,3 +1,7 @@
+acl-1.1.4 (14 Nov 2001)
+	- allow spaces in between words of qualifier names for
+          acl_from_text() in libacl.
+
 acl-1.1.3 (27 Aug 2001)
 	- fix bug in ACE ordering causing setfacl failure (eric@peters.org)
 	- improve ACL parsing error reporting from chacl (ak@suse.de)
